      modified or deleted, so for safety, io::File::open() automatically makes
      private copies of source files that are smaller than a user-specified
      limit (see io::File::setCopyMaxBytes()).  The limit can be set to zero
      to disable copying, but if it cannot be guaranteed that a file will not
      be modified, then it is best not to enable delayed loading for that file.
    - Added tools::PointPartitioner, a tool for fast spatial sorting
      of points stored in an external array, and tools::PointIndexGrid,
      an acceleration structure for fast range and nearest-neighbor searches.
    - Added tree::NodeManager, which linearizes a tree to facilitate
      efficient multithreading across all tree levels.
    - Added tools::prune() (and other variants), which replaces and
      outperforms Tree::prune().
    - Added tools::signedFloodFill(), which replaces and outperforms
      Tree::signedFloodFill().
    - Added tools::changeBackground (and other variants), which replaces
      and outperforms Tree::setBackground().
    - Added a fast but approximate narrow-band level set dilation method,
      a fast narrow-band level set erosion method,
      and a masked normalization method to tools::LevelSetTracker.
    - Added tools::Diagnose, which performs multithreaded diagnostics on grids
      to identify issues like values that are NaNs or out-of-range.
      It optionally generates a boolean grid of all values that fail
      user-defined tests.
    - Added optional alpha masks to tools::LevelSetMorphing.
    - Fixed an intermittent crash in tools::LevelSetMorphing.
    - Improved the performance of point scattering (by orders of magnitude)
      and added a DenseUniformPointScatter class as well as support for
      fractional numbers of particles per voxel.
    - Added edge-adjacent (6+12=18 neighbors) and vertex-adjacent (6+12+8=26
      neighbors) dilation algorithms to tools::Morphology::dilateVoxels().