@@ -17,6 +17,9 @@
   The limit can be set to zero to disable copying, but if it cannot be
   guaranteed that a file will not be modified, then it is best not to enable
   delayed loading for that file.
+- <TT>.vdb</TT> files can now optionally be compressed with the Blosc&nbsp;LZ4
+  codec.  <A HREF="http://www.blosc.org/">Blosc</A> compresses almost as well
+  as ZLIB, but it is much faster.
 - Added @vdblink::tools::PointPartitioner PointPartitioner@endlink, a tool
   for fast spatial sorting of points stored in an external array, and
   @link PointIndexGrid.h PointIndexGrid@endlink, an acceleration structure
